update ry.sh.